[package]
name = "reparo"
version = "0.1.0"
edition = "2021"
authors = ["Sho Kaneko <kanekoshoyu@gmail.com>"]
description = "rewind events"
repository = "https://github.com/kanekoshoyu/kucoin_arbitrage"
license = "MIT"

[lib]
name = "reparo"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
kanal = { version = "0.1.0-pre8", features = ["async"] }
tokio = { version = "1.33.0", features = ["full"] }
